<resources>
    <string name="app_name">My Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--DrawerMenu-->
    <string name="menu_done">Tarefas feitas</string>
    <string name="menu_todo">Pendentes</string>
    <string name="menu_logout">Sair</string>

    <!--LoginActivity-->
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="to_register">Cadastrar</string>
    <string name="complete_data">Preencha todos os dados!</string>
    <string name="generic_error">Algo errado aconteceu. Tente novamente.</string>
    <string name="invalid_email">Esse e-mail já está em uso</string>
    <string name="login">Login</string>
    <string name="message_error_login">Usuário e/ou senha incorretos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TaskFormActivity-->
    <string name="description">Descrição</string>
    <string name="complete">Completa</string>
    <string name="click_to_select">Clique para selecionar a data</string>
    <string name="add_task">Adicionar Tarefa</string>
</resources>
